--- a/Week 2 - 3/Week 2 - Homework.ipynb
+++ b/Week 2 - 3/Week 2 - Homework.ipynb
@@ -13,10 +13,10 @@
    "source": [
     "- Read NSFG respondent data with .ReadFemResp() function that provided by nsfg.py and assign it a variable that called pres \n",
     "- Show the columns and then show the first 20 and last 30 rows of dataframe and lastly print a sentences that show the number of rows and columns in this dataframe. For example, \"There are .. rows and .. columns\" \n",
-    "- Select the agescrn column from resp and print the value counts. How old are the youngest and oldest respondents? \n",
-    "- What are the pregnancy lengths(column that called \"prglngth\") for the respondent with caseid 2298? \n",
-    "- What is the average of the Pregnancies in lifetime (column that called \"numpregs\") of who is 25 and under 25 years old?\n",
-    "- What is the average of the Pregnancies in lifetime (column that called \"numpregs\") of who is at maximum age? that you found in 3. question"
+    "- Select the agescrn column from resp and print the value counts. How old are the youngest and oldest respondents(column taht called \"agescrn\") ? \n",
+    "- What is the number of the Pregnancies in lifetime (column that called \"numpregs\") for the respondent with caseid 2298? \n",
+    "- What is the average of the Pregnancies in lifetime (column that called \"numpregs\") of who is 25 and under 25 years old(column taht called \"agescrn\") \n",
+    "- What is the average of the Pregnancies in lifetime (column that called \"numpregs\") of who is at maximum age(column taht called \"agescrn\") ? that you found in 3. question"
    ]
   },
   {
@@ -39,8 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "nsfg.ReadFemPreg()\n",
-    "pres = nsfg.ReadFemPreg()"
+    "pres = nsfg.ReadFemResp()"
    ]
   },
   {
@@ -95,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "print(\"There are 13592 rows and 244 columns.\")"
+    "print(\"There are 7642 rows and 3087 columns.\")"
    ]
   },
   {
@@ -139,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "pres[pres.caseid==2298].prglngth #pregnancy lengths for the respondent with caseid 2298"
+    "pres[pres.caseid==2298].numpregs #number of the Pregnancies in lifetime  for the respondent with caseid 2298"
    ]
   },
   {
@@ -150,7 +149,7 @@
    },
    "outputs": [],
    "source": [
-    "pres[pres.agescrn<=25].pregnum.mean() #average of the Pregnancies in lifetime of who is 25 and under 25 years old"
+    "pres[pres.agescrn<=25].numpregs.mean() #average of the Pregnancies in lifetime of who is 25 and under 25 years old"
    ]
   },
   {
@@ -161,7 +160,7 @@
    },
    "outputs": [],
    "source": [
-    "pres[pres.agescrn==44].pregnum.mean() #average of the Pregnancies in lifetime of who is at maximum age that we found above (44)"
+    "pres[pres.agescrn==44].numpregs.mean() #average of the Pregnancies in lifetime of who is at maximum age that we found above (44)"
    ]
   },
   {
@@ -171,9 +170,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -185,7 +182,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
